syntax = "proto3";

package blog;

// Blog service definition
service BlogService {
  // auth
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  // posts
  rpc GetPost (GetPostRequest) returns (PostResponse);
  rpc ListPosts (ListPostRequest) returns (ListPostsResponse);
  rpc UpdatePost (UpdatePostRequest) returns (PostResponse);
  rpc DeletePost (GetPostRequest) returns (EmptyResponse);
  rpc CreatePost (CreatePostRequest) returns (PostResponse);
}

// Message Post definition
message Post {
  string id = 1;
  string title = 2;
  string content = 3;
  string author_id = 4;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
}

// requests

message GetPostRequest{
  string id =1;
}

message UpdatePostRequest{
  string id =1;
  string title =2;
  string content =3;
}

message CreatePostRequest{
  string title =2;
  string content =3;
}

message RegisterRequest{
  string username = 1;
  string email = 2;
  string password = 3;
}

message ListPostRequest{}

message LoginRequest{
  string email = 1;
  string password = 2;
}

// responses

message LoginResponse{
  string token = 1;
}

message RegisterResponse{
  User user = 1;
}

message EmptyResponse{}

message ListPostsResponse{
  repeated Post posts = 1;
}

message PostResponse {
  Post post = 1;
}