use std::fs;
use std::io::{self, Write};
use std::path::Path;

use anyhow::Result;
use clap::{Parser, Subcommand};
use blog_client::{BlogClient, Transport};
use blog_client::error::BlogClientError;
use uuid::Uuid;

const TOKEN_FILE: &str = ".blog_token";

#[derive(Parser, Debug)]
#[command(name = "blog-cli")]
#[command(about = "CLI –∫–ª–∏–µ–Ω—Ç –¥–ª—è blog-—Å–µ—Ä–≤–µ—Ä–∞ (HTTP/gRPC)", long_about = None)]
struct Cli {
    #[arg(long)]
    grpc: bool,

    #[arg(long)]
    server: Option<String>,

    #[command(subcommand)]
    command: Commands,
}

#[derive(Subcommand, Debug)]
enum Commands {
    Register {
        #[arg(long)]
        username: String,
        #[arg(long)]
        email: String,
        #[arg(long)]
        password: String,
    },
    Login {
        #[arg(long)]
        username: String,
        #[arg(long)]
        password: String,
    },
    Create {
        #[arg(long)]
        title: String,
        #[arg(long)]
        content: String,
    },
    Get {
        #[arg(long)]
        id: String,
    },
    Update {
        #[arg(long)]
        id: String,
        #[arg(long)]
        title: Option<String>,
        #[arg(long)]
        content: Option<String>,
    },
    Delete {
        #[arg(long)]
        id: String,
    },
    List {
        #[arg(long, default_value_t = 20)]
        limit: u32,
        #[arg(long, default_value_t = 0)]
        offset: u32,
    },
}

#[tokio::main]
async fn main() -> Result<()> {
    dotenvy::dotenv().ok();

    let cli = Cli::parse();

    let server_addr = cli.server.unwrap_or_else(|| {
        if cli.grpc {
            "http://127.0.0.1:50051".to_string()
        } else {
            "http://127.0.0.1:8080".to_string()
        }
    });

    let transport = if cli.grpc {
        Transport::Grpc(server_addr)
    } else {
        Transport::Http(server_addr)
    };

    let mut client = BlogClient::new(transport).await.map_err(map_client_err)?;

    if let Some(token) = load_token() {
        client.set_token(token);
    }

    match cli.command {
        Commands::Register { username, email, password } => {
            let resp = client.register(username.clone(), email, password).await.map_err(map_client_err)?;
            if let Some(token) = resp.token.as_ref() {
                save_token(token)?;
                println!("‚úÖ –ó–∞—Ä–µ–≥–∏—Å—Ç—Ä–∏—Ä–æ–≤–∞–Ω –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å, —Ç–æ–∫–µ–Ω —Å–æ—Ö—Ä–∞–Ω—ë–Ω.");
            } else {
                println!("‚ö† –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è –ø—Ä–æ—à–ª–∞, –Ω–æ —Ç–æ–∫–µ–Ω –Ω–µ –ø–æ–ª—É—á–µ–Ω.");
            }
            if let Some(user) = resp.user {
                println!("user: {} <{}>", user.username, user.email);
            }
        }

        Commands::Login { username, password } => {
            let resp = client.login(username.clone(), password).await.map_err(map_client_err)?;
            if let Some(token) = resp.token.as_ref() {
                save_token(token)?;
                println!("‚úÖ –£—Å–ø–µ—à–Ω—ã–π –≤—Ö–æ–¥, —Ç–æ–∫–µ–Ω —Å–æ—Ö—Ä–∞–Ω—ë–Ω.");
            } else {
                println!("‚ö† –õ–æ–≥–∏–Ω —É—Å–ø–µ—à–µ–Ω, –Ω–æ —Ç–æ–∫–µ–Ω –Ω–µ –ø–æ–ª—É—á–µ–Ω.");
            }
            if let Some(user) = resp.user {
                println!("user: {} <{}>", user.username, user.email);
            }
        }

        Commands::Create { title, content } => {
            let post = client.create_post(title, content).await.map_err(map_client_err)?;
            println!("‚úÖ –ü–æ—Å—Ç —Å–æ–∑–¥–∞–Ω:");
            print_post(&post);
        }

        Commands::Get { id } => {
            let id = parse_uuid(&id)?;
            let post = client.get_post(id).await.map_err(map_client_err)?;
            print_post(&post);
        }

        Commands::Update { id, title, content } => {
            let id = parse_uuid(&id)?;
            let mut post = client.get_post(id).await.map_err(map_client_err)?;

            if let Some(t) = title {
                post.title = t;
            }
            if let Some(c) = content {
                post.content = c;
            }

            let updated = client
                .update_post(post.id, post.title.clone(), post.content.clone())
                .await
                .map_err(map_client_err)?;

            println!("‚úÖ post created:");
            print_post(&updated);
        }

        Commands::Delete { id } => {
            let id = parse_uuid(&id)?;
            client.delete_post(id).await.map_err(map_client_err)?;
            println!("üóë –ü–æ—Å—Ç —É–¥–∞–ª—ë–Ω.");
        }

        Commands::List { limit, offset } => {
            let posts = client.list_posts(limit, offset).await.map_err(map_client_err)?;
            if posts.is_empty() {
                println!("(there are no posts yet)");
            } else {
                for p in posts {
                    println!("------------------------------");
                    print_post(&p);
                }
            }
        }
    }

    Ok(())
}

fn parse_uuid(input: &str) -> Result<Uuid> {
    Ok(Uuid::parse_str(input)?)
}

fn load_token() -> Option<String> {
    if !Path::new(TOKEN_FILE).exists() {
        return None;
    }
    match fs::read_to_string(TOKEN_FILE) {
        Ok(s) => {
            let t = s.trim().to_string();
            if t.is_empty() {
                None
            } else {
                Some(t)
            }
        }
        Err(_) => None,
    }
}

fn save_token(token: &str) -> io::Result<()> {
    let mut file = fs::File::create(TOKEN_FILE)?;
    file.write_all(token.as_bytes())?;
    Ok(())
}

fn print_post(post: &blog_client::models::Post) {
    println!("id:        {}", post.id);
    println!("title:     {}", post.title);
    println!("content:   {}", post.content);
    println!("author_id: {}", post.author_id);
    println!("created_at: {}", post.created_at);
    if let Some(updated_at) = post.updated_at {
        println!("updated_at: {}", updated_at);
    }
}

fn map_client_err(err: BlogClientError) -> anyhow::Error {
    anyhow::anyhow!(err)
}

